--- a/.cargo/config
+++ b/.cargo/config
@@ -2,9 +2,8 @@
 target = "riscv64gc-unknown-none-elf"
 rustflags = ['-Clink-arg=-Tsrc/lds/virt.lds']
 
-[profile.test]
-target = "x86_64-unknown-linux-gnu"
-
-[target.riscv64gc-unknown-none-elf]
-#runner = "qemu-system-riscv64 -S -gdb tcp::3333 -machine virt -cpu rv64 -smp 4 -m 128M -drive if=none,format=raw,file=hdd.dsk,id=foo -device virtio-blk-device,scsi=off,drive=foo -nographic -serial mon:stdio -bios none -device virtio-rng-device -device virtio-gpu-device -device virtio-net-device -device virtio-tablet-device -device virtio-keyboard-device -kernel "
+[target.'cfg(gdb = "false")']
 runner = "qemu-system-riscv64 -machine virt -cpu rv64 -smp 4 -m 128M -drive if=none,format=raw,file=hdd.dsk,id=foo -device virtio-blk-device,scsi=off,drive=foo -nographic -serial mon:stdio -bios none -device virtio-rng-device -device virtio-gpu-device -device virtio-net-device -device virtio-tablet-device -device virtio-keyboard-device -kernel "
+
+[target.'cfg(gdb = "true")']
+runner = "qemu-system-riscv64 -S -gdb tcp::3333 -machine virt -cpu rv64 -smp 4 -m 128M -drive if=none,format=raw,file=hdd.dsk,id=foo -device virtio-blk-device,scsi=off,drive=foo -nographic -serial mon:stdio -bios none -device virtio-rng-device -device virtio-gpu-device -device virtio-net-device -device virtio-tablet-device -device virtio-keyboard-device -kernel "
